test_case/rust-lang_rust/41073_380391004.rs
rust
u.y = Box::new(42); //~ ERROR assignment to non-`Copy` union field requires unsafe function or block
